assets/stylesheet.css
@import url('https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap');

body {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin: 0;
  font-family: 'Syne Mono', monospace;
  color: #C4C7C5;
  background-color: black;
  justify-content: center;
  align-items: center;
  height: 100vh;
}

.content {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  margin: 0;
  position: relative;
}

.thingies {
  flex: 1 1 20%;
  min-width: 230px;
  text-align: center;
  margin: 170px auto 0 auto;
}

h1 {
  margin-bottom: 0;
}

form {
  padding-top: 10px;
}

#pfp {
  position: absolute;
  top: -220px;
  box-shadow: 0px 0px 18px white;
  border-radius: 50%;
  transition: transform .35s ease-in-out;
  transform: translate3d(0px, 0px, 0px);

}

#pfp:hover {
  transform: scale(1.1);
}

#bigheader {
  font-size: 3em;
  font-style: italic;
  margin-top: 110px;
  text-align: center;
  color:white;
  position: absolute;
  top: 0px;
  left: 50%;
  transform: translateX(-50%);
  z-index: -1;
}

a {
  text-decoration: none;
  color: #C4C7C5;
}

a:hover {
  text-decoration: underline;
}

